--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -670,7 +670,7 @@
                                               </object>
                                             </child>
                                             <property name="tooltip-text">Perform custom transformations on the data</property>
-                                            <property name="action-name">app.transform_data</property>
+                                            <property name="action-name">app.transform</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
                                             <property name="margin-start">5</property>
