--- a/data/style.css
+++ b/data/style.css
@@ -57,6 +57,20 @@ gridview#style-grid child:selected picture {
   box-shadow: 0 0 0 3px @theme_selected_bg_color;
 }
 
+gridview#style-grid child:focus {
+  outline-style: none;
+}
+
+gridview#style-grid child:focus picture {
+  outline: 0 solid transparent;
+  outline-color: alpha(@theme_selected_bg_color, .5);
+  outline-width: 2px;
+  outline-offset: 2px;
+  transition: outline-color 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94),
+              outline-width 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94),
+              outline-offset 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
 gridview#style-grid child image#indicator {
   opacity: 0;
 }
