Remove custom help build and link to help.gnome.org instead

--- a/help/C/index.page
+++ b/help/C/index.page
@@ -5,6 +5,7 @@
 
   <info>
     <include href="legal.xml" xmlns="http://www.w3.org/2001/XInclude"/>
+    <desc>Plot and manipulate data</desc>
   </info>
 
   <title>
